--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
       font-size: 2rem;
       font-weight: 600;
       color: white;
+      text-transform: uppercase;
       letter-spacing: 2px;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
     }
@@ -318,7 +319,7 @@
     }
     @media (max-width: 768px) {
       .header-title {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
       }
       .logo {
         width: 40px;
@@ -335,16 +336,11 @@
 
   <div class="app-container">
 
-    <div class="app-header">
-      
-      <img src="logo.webp" alt="X and Y JEE Logo" class="logo"> <!-- Replace 'logo.png' with your logo file -->
-      <h1 class="header-title">XandY <span>JEE</span></h1>
-    </div>
+    
 
 
     <div class="app-header">
       <h1>JEE Main College Predictor 2025</h1>
-      <br>
       <p class="subtitle">Based on JoSAA 2024 Round 5 Cutoff Data</p>
     </div>
     <div class="content">
