--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
     <div class="app-header">
       <h1>JEE Main College Predictor 2025</h1>
-      <p class="subtitle">Based on JoSAA 2024 Round 5 Cutoff Data</p>
+      <p >Based on JoSAA 2024 Round 5 Cutoff Data</p>
     </div>
     <div class="content">
       <div class="step active" id="step1">
