--- a/index.html
+++ b/index.html
@@ -399,6 +399,193 @@
           <div class="carousel-item">
             <img src="ad2.png" alt="Advertisement 2">
           </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+         
         </div>
       </div>
     </div>
@@ -474,7 +661,7 @@
 let currentSlide = 0;
 const slides = document.querySelectorAll('.carousel-item');
 let cycleCount = 0;
-const maxCycles = 10; // Reset after 10 complete cycles
+const maxCycles = 100; // Reset after 10 complete cycles
 let touchStartX = 0;
 let touchEndX = 0;
 let isDragging = false;
@@ -581,7 +768,7 @@ carouselInner.addEventListener('touchmove', (e) => {
 });
 
 // Start the carousel with continuous right motion
-let autoSlide = setInterval(moveRight, 3500); // Move right every 3.5 seconds
+let autoSlide = setInterval(moveRight, 4000); // Move right every 3.5 seconds
 
 // Pause auto-slide on touch and resume after interaction
 carouselInner.addEventListener('touchstart', () => {
