--- a/index.html
+++ b/index.html
@@ -585,6 +585,96 @@
           <div class="carousel-item">
             <img src="ad2.png" alt="Advertisement 2">
           </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
+          <div class="carousel-item">
+            <img src="banner.png" alt="Advertisement 1">
+          </div>
+          <div class="carousel-item">
+            <img src="ad2.png" alt="Advertisement 2">
+          </div>
          
         </div>
       </div>
@@ -768,7 +858,7 @@ carouselInner.addEventListener('touchmove', (e) => {
 });
 
 // Start the carousel with continuous right motion
-let autoSlide = setInterval(moveRight, 4000); // Move right every 3.5 seconds
+let autoSlide = setInterval(moveRight, 6000); // Move right every 3.5 seconds
 
 // Pause auto-slide on touch and resume after interaction
 carouselInner.addEventListener('touchstart', () => {
